--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-好的，根據您的要求，我為您重新規劃了金門四天三夜的行程。此行程已將住宿點固定在「依山初晴 金城鎮珠山17-1號」，並考慮了您的航班時間，同時包含了您指定的景點和時間限制。
-
-以下是金門行程的詳細規劃，您可以將其作為 GoldenGate/index.html 的內容進行參考或替換。
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -78,33 +74,35 @@
         <div class="day-card">
             <h2 class="text-2xl font-semibold mb-4 section-title">第一天：8/7 (週三) 抵達與東金門探索</h2>
             <ul class="list-disc pl-5 space-y-2">
-                <li><strong>07:20 - 08:25：</strong>搭乘飛機前往金門。</li>
-                <li><strong>08:30 - 09:30：</strong>抵達金門尚義機場，領取行李，前往金城鎮享用早餐。</li>
-                <li><strong>09:30 - 10:30：</strong>金城鎮特色早餐 (例如：壽記廣東粥、永春廣東粥)。</li>
-                <li><strong>10:30 - 12:30：</strong><a href="https://maps.app.goo.gl/p3hD2MEWcwGP8vyk6" target="_blank" class="location-link font-medium">瓊林聚落</a>：探索金門最具代表性的閩南傳統聚落，欣賞宗祠建築與風獅爺。</li>
-                <li><strong>12:30 - 13:30：</strong>午餐 (瓊林或沙美附近特色小吃)。</li>
-                <li><strong>13:30 - 15:30：</strong><a href="https://maps.app.goo.gl/UiZefLaFUuH3cSERA" target="_blank" class="location-link font-medium">沙美摩洛哥</a> (沙美老街)：體驗異國風情，感受殘破卻獨特的建築美學。</li>
-                <li><strong>15:30 - 16:30：</strong>前往住宿點「依山初晴」辦理入住，稍作休息。</li>
-                <li><strong>18:00 - 19:00：</strong>金城鎮晚餐 (例如：記德海鮮、高坑牛肉店)。</li>
-                <li><strong>19:00 後：</strong>金城鎮自由活動，可逛街、品嚐宵夜。</li>
+                <li>搭乘飛機前往金門。</li>
+                <li>抵達金門尚義機場，領取行李，租借交通工具。</li>
+                <li>金城鎮特色早餐 (例如：壽記廣東粥、永春廣東粥)。</li>
+                <li><a href="https://maps.app.goo.gl/p3hD2MEWcwGP8vyk6" target="_blank" class="location-link font-medium">瓊林聚落</a>：探索金門最具代表性的閩南傳統聚落，欣賞宗祠建築與風獅爺。</li>
+                <li><a href="https://maps.app.goo.gl/h1J2K3L4M5N6O7P8A" target="_blank" class="location-link font-medium">八二三戰史館</a>：了解八二三砲戰的歷史背景與影響。</li>
+                <li>午餐 (瓊林或沙美附近特色小吃，例如：長榮山西拌麵)。</li>
+                <li><a href="https://maps.app.goo.gl/UiZefLaFUuH3cSERA" target="_blank" class="location-link font-medium">沙美摩洛哥</a> (沙美老街)：體驗異國風情，感受殘破卻獨特的建築美學，並逛逛老街。</li>
+                <li><a href="https://maps.app.goo.gl/q9wX8yZ7a6b5c4d3e" target="_blank" class="location-link font-medium">馬山觀測所</a>：金門最靠近中國大陸的觀測所，可透過望遠鏡眺望對岸。</li>
+                <li>前往住宿點「依山初晴」辦理入住，稍作休息。</li>
+                <li>金城鎮晚餐 (例如：記德海鮮、高坑牛肉店)。</li>
+                <li>金城鎮自由活動，可逛街、品嚐宵夜。</li>
             </ul>
         </div>
 
         <!-- Day 2 -->
         <div class="day-card">
-            <h2 class="text-2xl font-semibold mb-4 section-title">第二天：8/8 (週四) 小金門烈嶼鄉深度遊</h2>
+            <h2 class="text-2xl font-semibold mb-4 section-title">第二天：8/8 (週四) 小金門烈嶼鄉深度遊 (12:00 - 18:00)</h2>
             <ul class="list-disc pl-5 space-y-2">
-                <li><strong>09:00 - 11:30：</strong>金城鎮周邊景點 (例如：莒光樓、金門總兵署、模範街)，或在民宿享受悠閒早晨。</li>
-                <li><strong>11:30 - 12:30：</strong>午餐 (水頭碼頭附近或金城鎮)。</li>
-                <li><strong>12:30 - 13:00：</strong>前往水頭碼頭，搭乘渡輪前往小金門 (烈嶼鄉)。</li>
-                <li><strong>13:00 - 13:30：</strong>抵達小金門九宮碼頭，租借交通工具 (機車或計程車)。</li>
-                <li><strong>13:30 - 14:30：</strong><a href="https://maps.app.goo.gl/7e7nC3sB43vX7818A" target="_blank" class="location-link font-medium">湖井頭戰史館</a>：了解小金門的戰地歷史與對岸風光。</li>
-                <li><strong>14:30 - 15:30：</strong><a href="https://maps.app.goo.gl/t6tE4tJpY3z8p9fG7" target="_blank" class="location-link font-medium">鐵漢堡與勇士堡</a>：探索地下坑道與軍事設施。</li>
-                <li><strong>15:30 - 16:30：</strong><a href="https://maps.app.goo.gl/6j3uK5mX2Y3Z8p9fG7" target="_blank" class="location-link font-medium">沙溪堡</a>：欣賞海景與碉堡，感受寧靜的海岸線。</li>
-                <li><strong>16:30 - 17:30：</strong><a href="https://maps.app.goo.gl/8e8oP7qR8sT9u0v1A" target="_blank" class="location-link font-medium">八達樓子</a> 或 烈嶼鄉文化館：進一步了解小金門的文化與歷史。</li>
-                <li><strong>17:30 - 18:00：</strong>返回九宮碼頭。</li>
-                <li><strong>18:00 - 18:30：</strong>搭乘渡輪返回大金門水頭碼頭。</li>
-                <li><strong>19:00 後：</strong>金城鎮晚餐，自由活動。</li>
+                <li>上午：金城鎮周邊景點 (例如：莒光樓、金門總兵署、模範街)，或在民宿享受悠閒早晨。</li>
+                <li>午餐 (水頭碼頭附近或金城鎮)。</li>
+                <li>前往水頭碼頭，搭乘渡輪前往小金門 (烈嶼鄉)。</li>
+                <li>抵達小金門九宮碼頭，租借交通工具 (機車或計程車)。</li>
+                <li><a href="https://maps.app.goo.gl/7e7nC3sB43vX7818A" target="_blank" class="location-link font-medium">湖井頭戰史館</a>：了解小金門的戰地歷史與對岸風光。</li>
+                <li><a href="https://maps.app.goo.gl/t6tE4tJpY3z8p9fG7" target="_blank" class="location-link font-medium">鐵漢堡與勇士堡</a>：探索地下坑道與軍事設施。</li>
+                <li><a href="https://maps.app.goo.gl/6j3uK5mX2Y3Z8p9fG7" target="_blank" class="location-link font-medium">沙溪堡</a>：欣賞海景與碉堡，感受寧靜的海岸線。</li>
+                <li><a href="https://maps.app.goo.gl/8e8oP7qR8sT9u0v1A" target="_blank" class="location-link font-medium">八達樓子</a> 或 烈嶼鄉文化館：進一步了解小金門的文化與歷史。</li>
+                <li>返回九宮碼頭。</li>
+                <li>搭乘渡輪返回大金門水頭碼頭。</li>
+                <li>金城鎮晚餐，自由活動。</li>
             </ul>
         </div>
 
@@ -112,13 +110,13 @@
         <div class="day-card">
             <h2 class="text-2xl font-semibold mb-4 section-title">第三天：8/9 (週五) 西金門與文化體驗</h2>
             <ul class="list-disc pl-5 space-y-2">
-                <li><strong>09:00 - 11:00：</strong><a href="https://maps.app.goo.gl/rNS8T2iAF9BHemPg6" target="_blank" class="location-link font-medium">金門國家公園管理處</a>：了解金門的自然生態與人文歷史。</li>
-                <li><strong>11:00 - 12:00：</strong><a href="https://maps.app.goo.gl/cW8cQ2yX5Z7b9dE2A" target="_blank" class="location-link font-medium">莒光樓</a>：金門地標建築，登高望遠，俯瞰金城鎮與廈門。</li>
-                <li><strong>12:00 - 13:00：</strong>午餐 (金城鎮或水頭聚落附近)。</li>
-                <li><strong>13:00 - 15:00：</strong><a href="https://maps.app.goo.gl/uR4dY7wX9Z1b3c4D6" target="_blank" class="location-link font-medium">水頭聚落與得月樓</a>：漫步閩南古厝群，欣賞中西合璧的洋樓建築。</li>
-                <li><strong>15:00 - 16:30：</strong><a href="https://maps.app.goo.gl/aB1c2dE3fG4h5i6j8" target="_blank" class="location-link font-medium">古寧頭戰史館</a>：深入了解古寧頭戰役的歷史意義。</li>
-                <li><strong>16:30 - 17:30：</strong><a href="https://maps.app.goo.gl/zX9y8w7v6u5t4r3s2" target="_blank" class="location-link font-medium">北山古洋樓</a>：感受戰火洗禮後的歷史痕跡。</li>
-                <li><strong>18:00 後：</strong>金城鎮晚餐，自由活動，可安排購買伴手禮。</li>
+                <li><a href="https://maps.app.goo.gl/rNS8T2iAF9BHemPg6" target="_blank" class="location-link font-medium">金門國家公園管理處</a>：了解金門的自然生態與人文歷史。</li>
+                <li><a href="https://maps.app.goo.gl/cW8cQ2yX5Z7b9dE2A" target="_blank" class="location-link font-medium">莒光樓</a>：金門地標建築，登高望遠，俯瞰金城鎮與廈門。</li>
+                <li>午餐 (金城鎮或水頭聚落附近)。</li>
+                <li><a href="https://maps.app.goo.gl/uR4dY7wX9Z1b3c4D6" target="_blank" class="location-link font-medium">水頭聚落與得月樓</a>：漫步閩南古厝群，欣賞中西合璧的洋樓建築。</li>
+                <li><a href="https://maps.app.goo.gl/aB1c2dE3fG4h5i6j8" target="_blank" class="location-link font-medium">古寧頭戰史館</a>：深入了解古寧頭戰役的歷史意義。</li>
+                <li><a href="https://maps.app.goo.gl/zX9y8w7v6u5t4r3s2" target="_blank" class="location-link font-medium">北山古洋樓</a>：感受戰火洗禮後的歷史痕跡。</li>
+                <li>金城鎮晚餐，自由活動，可安排購買伴手禮。</li>
             </ul>
         </div>
 
@@ -126,10 +124,10 @@
         <div class="day-card">
             <h2 class="text-2xl font-semibold mb-4 section-title">第四天：8/10 (週五) 早餐與返程</h2>
             <ul class="list-disc pl-5 space-y-2">
-                <li><strong>08:00 - 09:00：</strong>享用金門特色早餐 (例如：燒餅、油條、豆漿)。</li>
-                <li><strong>09:00 - 10:30：</strong>自由活動，可進行最後的伴手禮採買或前往附近小景點。</li>
-                <li><strong>10:30 - 11:00：</strong>前往金門尚義機場。</li>
-                <li><strong>12:00 - 13:00：</strong>搭乘飛機返回。</li>
+                <li>享用金門特色早餐 (例如：燒餅、油條、豆漿)。</li>
+                <li>自由活動，可進行最後的伴手禮採買或前往附近小景點。</li>
+                <li>前往金門尚義機場。</li>
+                <li>搭乘飛機返回。</li>
             </ul>
         </div>
 
